cmake_minimum_required(VERSION 3.17)
project(client)
include_directories(include)

set(CMAKE_CXX_STANDARD 11)
set(Boost_USE_STATIC_LIBS OFF)
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_RUNTIME OFF)
find_package(Boost 1.45.0 COMPONENTS filesystem regex)

if(Boost_FOUND)
    add_executable(client src/ClientMain.cpp src/ConnectionHandler.cpp include/ConnectionHandler.h src/KeyboardListenerTask.cpp include/KeyboardListenerTask.h)
    target_link_libraries(client Boost::filesystem Boost::regex)
endif()
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")